--- a/LearnD3JS/Edit Graph/Index.html
+++ b/LearnD3JS/Edit Graph/Index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
     <title>LFA</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="" href="/Force Simulation/style.css">
-
 </head>
 
 <body>
+
     <h1 class="row justify-content-center mb-5 mt-5">LFA Tema2</h1>
     <div class="container justify-content-center mt-5">
 
@@ -20,35 +18,53 @@
 
         <div class="row mt-5 mb-5">
 
-            <div class="col align-self-start">
+            <div class="col-md-3">
                 <form name="newNode">
-                    <input name="newNodeSubmit" type="button" value="New node" onclick="createNodeClick()">
-                    <input type="text" id="newNodeName" placeholder="Add node name&hellip;">
+                    <input class="mt-3" name="newNodeSubmit" type="button" value="New node" onclick="createNodeClick()">
+                    <input class="mt-3" type="number" id="newNodeName" placeholder="Add node name&hellip;">
                 </form>
                 <form name="newLink">
-                    <input name="newLinkSubmit" type="button" value="New link" onclick="createLinkClick()">
-                    <input type="text" id="newSource" placeholder="Add source name&hellip;">
-                    <input type="text" id="newTarget" placeholder="Add target name&hellip;">
+                    <input class="mt-3" name="newLinkSubmit" type="button" value="New link" onclick="createLinkClick()">
+                    <input class="mt-3" type="number" id="newSource" placeholder="Add source name&hellip;">
+                    <input class="mt-1" type="number" id="newTarget" placeholder="Add target name&hellip;">
                 </form>
             </div>
 
-            <div class="col align-self-end ">
+            <div class="col-md-3">
                 <form name="removeNode">
-                    <input name="removeNodeSubmit" type="button" value="Remove node" onclick="removeNodeClick()">
-                    <input type="text" id="removeNodeName" placeholder="Remove node name&hellip;">
+                    <input class="mt-3" name="removeNodeSubmit" type="button" value="Remove node" onclick="removeNodeClick()">
+                    <input class="mt-3" type="number" id="removeNodeName" placeholder="Remove node name&hellip;">
                 </form>
                 <form name="removeLink">
-                    <input name="removeLinkSubmit" type="button" value="Remove link" onclick="removeLinkClick()">
-                    <input type="text" id="removeSource" placeholder="Add source name&hellip;">
-                    <input type="text" id="removeTarget" placeholder="Add target name&hellip;">
+                    <input class="mt-3" name="removeLinkSubmit" type="button" value="Remove link" onclick="removeLinkClick()">
+                    <input class="mt-3" type="number" id="removeSource" placeholder="Add source name&hellip;">
+                    <input class="mt-1" type="number" id="removeTarget" placeholder="Add target name&hellip;">
+                </form>
+            </div>
+            <div class="col-md-3">
+                <form name="editNode">
+                    <input class="mt-3" name="editNodeSubmit" type="button" value="Edit Node" onclick="editNodeClick()">
+                    <input class="mt-3" type="number" id="editCurrent" placeholder="Add current name&hellip;">
+                    <input class="mt-1" type="number" id="editFuture" placeholder="Add future name&hellip;">
                 </form>
             </div>
 
+            <div class="col-md-3">
+                <form name="editLink">
+                    <input class="mt-3" name="editLinkSubmit" type="button" value="Edit link" onclick="editLinkClick()">
+                    <input class="mt-3" type="number" id="editLink1Current" placeholder="Add node 1 current link&hellip;">
+                    <input class="mt-1" type="number" id="editLink2Current" placeholder="Add node 2 current link&hellip;">
+                    <input class="mt-1" type="number" id="editLink1Future" placeholder="Add node 1 future link&hellip;">
+                    <input class="mt-1" type="number" id="editLink2Future" placeholder="Add node 2 future link&hellip;">
+                </form>
+            </div>
         </div>
 
     </div>
+
     <script src="https://d3js.org/d3.v3.min.js "></script>
-    <script src="/Force Simulation/script.js"></script>
+    <script src="/Edit Graph/script.js"></script>
+
 </body>
 
 </html>
