--- a/LearnHTMLCSSJS/Beginner-project-js/CreateThis/Edit Graph/Index.html
+++ b/LearnHTMLCSSJS/Beginner-project-js/CreateThis/Edit Graph/Index.html
@@ -63,7 +63,7 @@
     </div>
 
     <script src="https://d3js.org/d3.v3.min.js "></script>
-    <script src="/Edit Graph/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
